<resources>
    <string name="app_name">My Application</string>
    <string name="table">123456789</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="division">/</string>
    <string name="mult">*</string>
    <string name="equals">=</string>
    <string name="cls">cls</string>
    <string name="del">del</string>
    <string name="sqr">sqr</string>
    <string name="mem">м+</string>
    <string name="forget">m-</string>
    <string name="remember">mr</string>
    <string name="percent">%</string>
</resources>