<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:columnCount="4"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_columnSpan="4"
        android:textSize="40sp"
        android:text="@string/table"/>
    <Button
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/one"
        android:textSize="20sp"
        >
    </Button>

    <Button
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/two"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/three"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/four"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/five"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/six"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/seven"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/eight"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/nine"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/zero"
        android:textSize="20sp"

        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/dot"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/plus"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/minus"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/division"
        android:textSize="20sp"
        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:text="@string/mult"
        android:textSize="20sp"

        >
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/equals"
        android:textSize="20sp"

        >
    </Button>
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/cls"
     android:textSize="20sp"


     >
 </Button>
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/del"
     android:textSize="20sp"


     >
 </Button>
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/sqr"
     android:textSize="20sp"


     >
 </Button>
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/mem"
     android:textSize="20sp"
     >
 </Button>
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/forget"
     android:textSize="20sp"
     >
 </Button>
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/remember"
     android:textSize="20sp"
     >
 </Button>
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/percent"
     android:textSize="20sp"
     android:layout_columnSpan="2"
     android:layout_gravity="fill_horizontal"
     >
 </Button>
 








</GridLayout>